#295 Add default padding to details-list items to avoid horizontal scrollbar in item-details.

--- a/src/scss/partials/_details-list.scss
+++ b/src/scss/partials/_details-list.scss
@@ -9,6 +9,11 @@
 		display: flex;
 		align-items: center;
 
+		@include touch-or-bp-down(sm) {
+			height: $line-height-large-touch;
+			padding: 0 $default-padding-x-touch;
+		}
+
 		@include mouse-and-bp-up(md) {
 			height: $line-height-large;
 			padding: 0 $default-padding-x;
